--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,21 @@
 </head>
 <body>
     <h1 class="custom-header">The Books</h1>
+    <button id="add-book-btn">Add Book</button>
+    <div id="book-form-container" style="display: none;">
+        <form id="book-form">
+            <label for="title">Title:</label>
+            <input type="text" id="title" name="title" required><br><br>
+            <label for="author">Author:</label>
+            <input type="text" id="author" name="author" required><br><br>
+            <label for="pages">Pages:</label>
+            <input type="number" id="pages" name="pages" required><br><br>
+            <label for="read">Read:</label>
+            <input type="checkbox" id="read" name="read"><br><br>
+            <button type="submit">Add Book</button>
+            <button type="button" id="cancel-form">Cancel</button>
+        </form>
+    </div>
     <div class="book-list">
         <table>
             <thead>
